added support for mistral embdding api

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ fastapi
 uvicorn
 pymilvus
 pymilvus[model]
-openai
-PyPDF2
+mistralai
+pypdf
 langchain
 langchain_community 
 langchain_huggingface 
 langchain-milvus
-FlagEmbedding>=1.2.2
+langchain_mistralai
+torch
 datasets
 peft
 nltk
+python-multipart
+cryptography
