--- a/.gitignore
+++ b/.gitignore
@@ -127,9 +127,12 @@ celerybeat.pid
 .venv
 env/
 venv/
+myvenv/
 ENV/
 env.bak/
 venv.bak/
+.idx
+.vscode
 
 # Spyder project settings
 .spyderproject
@@ -161,3 +164,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#Docker
+/docker-compose/milvus-standalone/volumes
+
+# Local Model store
+/hf_models
+
+# Dummy files
+dummy.py
